--- a/views/pelicula.handlebars
+++ b/views/pelicula.handlebars
@@ -1,8 +1,8 @@
 <!-- Page Content -->
-<div class="container carta">
+<div class="container carta pelicula">
 
   <!-- Portfolio Item Heading -->
-  <h1 class="my-4 carta">{{pelicula.Title}}
+  <h1 class="my-4">{{pelicula.Title}}
     <small class="font-italic text-muted lead">{{pelicula.Year}}</small>
   </h1>
 
