--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -68,17 +68,6 @@
         align-self: center;
     }
     
-    .card {
-        opacity: 0.5;
-        filter: alpha(opacity=50);
-    }
-    
-    .card:hover {
-        opacity: 1.0;
-        filter: alpha(opacity=100);
-        /* For IE8 and earlier */
-    }
-    
     .btn-group,
     .dropdown-menu,
     .generos {
@@ -90,12 +79,25 @@
     
     .carta,
     .carta li,
-    input {
+    input,
+    h1 {
         background-color: black !important;
         color: orange;
         border-color: rgb(50, 17, 82);
         text-shadow: 2px 2px rgb(61, 4, 61);
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+    
+    .carta {
+        opacity: 0.5;
+        filter: alpha(opacity=50);
+    }
+    
+    .carta:hover,
+    .pelicula {
+        opacity: 1.0;
+        filter: alpha(opacity=100);
+        /* For IE8 and earlier */
     }
     
     input,
