--- a/views/peliculas.handlebars
+++ b/views/peliculas.handlebars
@@ -29,7 +29,7 @@
     <div class="container h-100">
         <div class="row align-items-center h-100">
             <div class="col-6 mx-auto">
-                <div class="alert alert-dark" role="alert">}
+                <div class="alert alert-dark" role="alert">
                    
                     Cantidad de resultados: {{listaPeliculas.length}} de {{resultados}}
 
