--- a/views/peliculas.handlebars
+++ b/views/peliculas.handlebars
@@ -1,10 +1,14 @@
-    <form action="/bla" id="formulario" method="POST"></form>
+    <form action="/search" id="formulario" method="POST"></form>
     <div class="container-fluid p-0">
         <header>
             <div class="container justify-content-center ">
                 <div class="row no-gutters">
                     <div class="col-md-2 "></div>
+                       {{#if nombre}}
                     <div class="col-md-1" id="logo"><a href="/"></a> <p class="text-monospace text-white"> Hola {{nombre}}</p> </div>
+                    {{else}}
+                        <div class="col-md-1" id="logo"><a href="/"> <p class="text-monospace text-white"> Registrate</p></a> </div>
+                    {{/if}}
                     <div class="col-md-5  d-flex flex-wrap align-content-center ">
                         <div class="input-group barrabuscadora">
                             <input type="text" class="form-control bg-dark text-monospace text-white"
@@ -13,8 +17,8 @@
                             <div class="input-group-append bg-dark"><button class="btn btn-dark btn-sm boton"
                                     formmethod="POST" form="formulario" type="submit"><i
                                         class="material-icons md-18">search</i></button></div>
+                            </div>
                         </div>
-                    </div>
                     <div class="col-md-4 "></div>
                 </div>
             </div>
@@ -47,7 +51,7 @@
 <div class="container w-50 pt-3 bg-dark ">
     <ul class="nav justify-content-center">
    
-        <form action="/bla" id="filtrar" method="post" class="border border-secondary     border-left-0 ">
+        <form action="/search" id="filtrar" method="post" class="border border-secondary     border-left-0 ">
             <input type="submit" form="filtrar" formmethod="post"
                 class="text-warning font-weight-bold alert-warning bg-dark" data-toggle="tooltip" data-placement="right"
                 title="Pick a year and filter 10 results." value="Filter">
@@ -104,7 +108,7 @@
                                         src="https://ia.media-imdb.com/images/G/01/imdb/plugins/rating/images/imdb_38x18.png"
                                         alt="{{this.Title}}" />
                                 </a></span></small></p>
-                    <form action="/bla" id="form{{this.imdbID}}{{this.Title}}" method="post">
+                    <form action="/search" id="form{{this.imdbID}}{{this.Title}}" method="post">
                         <input type="hidden" name="titulo" value="{{this.Title}}">
                         <input type="hidden" name="idmb" value="{{this.imdbID}}">
                         <input type="hidden" name="anio" value="{{this.Year}}">
