--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -18,7 +18,7 @@
 
             </div>
             <div class="card-body">
-                <form action="/login" method="POST">
+                <form action="/home" method="POST">
                     <div class="input-group form-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
